bdr.BDR2.scala.error
Erreur de compilation :
BDR2:21: error: missing parameter type
     default => println("oops")
     ^